@@ -1,12 +1,22 @@
 module PageObject
   module Elements
     class TableRow < Element
+      include Enumerable
 
       def initialize(element, platform)
         @element = element
         include_platform_for platform
       end
       
+      #
+      # iterator that yields with a PageObject::Elements::TableCell
+      #
+      def each
+        for index in 1..self.columns do
+          yield self[index-1] 
+        end
+      end
+
       protected
       
       def child_xpath
