@@ -6,22 +6,6 @@ describe PageObject::Elements::TableRow do
   let(:table_row_driver) { double('table_row_driver') }
 
   describe "interface" do
-    context "for watir" do
-      it "should return a table cell when indexed" do
-        table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :watir)    
-        table_row_driver.should_receive(:[]).with(1).and_return(table_cell)
-        table_row[1].should be_instance_of PageObject::Elements::TableCell
-      end
-
-      it "should return the number of columns" do
-        table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :watir)
-        table_row_driver.should_receive(:wd).and_return(table_row_driver)
-        table_row_driver.should_receive(:find_elements).with(:xpath, ".//child::td|th").and_return(table_row_driver)
-        table_row_driver.should_receive(:size).and_return(3)
-        table_row.columns.should == 3
-      end
-    end    
-
     context "for selenium" do
       it "should return a table cell when indexed" do
         table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :selenium)
@@ -36,6 +20,40 @@ describe PageObject::Elements::TableRow do
         table_row_driver.should_receive(:size).and_return(3)
         table_row.columns.should == 3
       end
+
+      it "should iterate over the table columns" do
+        table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :selenium)
+        table_row.should_receive(:columns).and_return(2)
+        table_row.stub(:[]).and_return(table_row_driver)
+        count = 0
+        table_row.each { |e| count += 1 }
+        count.should == 2
+      end    
     end
+
+    context "for watir" do
+      it "should return a table cell when indexed" do
+        table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :watir)    
+        table_row_driver.should_receive(:[]).with(1).and_return(table_cell)
+        table_row[1].should be_instance_of PageObject::Elements::TableCell
+      end
+
+      it "should return the number of columns" do
+        table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :watir)
+        table_row_driver.should_receive(:wd).and_return(table_row_driver)
+        table_row_driver.should_receive(:find_elements).with(:xpath, ".//child::td|th").and_return(table_row_driver)
+        table_row_driver.should_receive(:size).and_return(3)
+        table_row.columns.should == 3
+      end
+
+      it "should iterate over the table columns" do
+        table_row = PageObject::Elements::TableRow.new(table_row_driver, :platform => :watir)
+        table_row.should_receive(:columns).and_return(2)
+        table_row.stub(:[])
+        count = 0
+        table_row.each { |e| count += 1 }
+        count.should == 2
+      end    
+    end    
   end
 end
